force-app/main/default/objects/tc9_edc__Setup_Payment_Terms__mdt/tc9_edc__Setup_Payment_Terms__mdt.object-meta.xml
<CustomObject>
    <label>Setup Payment Terms</label>
    <pluralLabel>Setup Payment Terms</pluralLabel>
</CustomObject>