force-app/main/default/objects/tc9_edc__Setup_Payment_Terms__mdt/fields/tc9_edc__Days_From__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Days_From__c</fullName>
    <label>Days From</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>