force-app/main/default/objects/tc9_edc__Setup_Payment_Terms__mdt/fields/tc9_edc__Due_From__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Due_From__c</fullName>
    <label>Due From</label>
    <length>200</length>
    <type>Text</type>
</CustomField>