force-app/main/default/objects/tc9_edc__Setup_Payment_Terms__mdt/fields/tc9_edc__Payment_Terms_Description__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Payment_Terms_Description__c</fullName>
    <label>Payment Terms Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>