force-app/main/default/objects/tc9_edc__Setup_Payment_Terms__mdt/fields/tc9_edc__Payment_Terms_Name__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Payment_Terms_Name__c</fullName>
    <label>Payment Terms Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>